Persist and display additional Sonos data